--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Product detail service component for Thr3ds. ",
   "main": "index.js",
   "scripts": {
+    "test": "jest",
     "build": "webpack -d --watch",
     "start": "node server/index.js",
     "start:server": "nodemon server/index.js -w server -w"
@@ -39,11 +40,13 @@
     "mysql": "^2.18.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-test-renderer": "^16.13.1",
     "reactstrap": "^8.6.0",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-jest": "^26.3.0",
     "babel-loader": "^8.1.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
