--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     ]
   },
   "scripts": {
-    "test": "jest --watch",
+    "test": "jest",
     "build": "webpack -d --watch",
     "start": "node server/index.js",
     "start:server": "nodemon server/index.js -w server -w"
@@ -43,6 +43,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-test-render": "^1.1.2",
     "react-test-renderer": "^16.13.1",
     "reactstrap": "^8.6.0",
     "styled-components": "^5.2.0"
