--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "axios": "^0.20.0",
     "bluebird": "^3.7.2",
@@ -38,6 +39,7 @@
     "concurrently": "^5.3.0",
     "express": "^4.17.1",
     "jest": "^26.4.2",
+    "material-ui-dropzone": "^3.5.0",
     "mongodb": "^3.6.2",
     "mysql": "^2.18.1",
     "react": "^16.13.1",
