--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "eslint-plugin-react-hooks": "^4.1.2",
     "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.5.0",
+    "mark.js": "^8.11.1",
     "react-addons-test-utils": "^15.6.2",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
