--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "test": "jest",
     "build": "webpack -d --watch",
-    "start": "node server/index.js",
+    "start": "nodemon server/index.js -w server -w",
     "start:server": "nodemon server/index.js -w server -w"
   },
   "repository": {
@@ -42,6 +42,7 @@
     "material-ui-dropzone": "^3.5.0",
     "mongodb": "^3.6.2",
     "mysql": "^2.18.1",
+    "nodemon": "^2.0.4",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
