--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "scripts": {
     "test": "jest",
-    "build": "webpack -d --watch",
-    "start": "nodemon server/index.js -w server -w",
+    "build": "webpack -p --mode=production",
+    "start": "cd server && nodemon index.js",
     "start:server": "nodemon server/index.js -w server -w"
   },
   "repository": {
@@ -36,20 +36,18 @@
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
-    "concurrently": "^5.3.0",
     "express": "^4.17.1",
     "jest": "^26.4.2",
     "material-ui-dropzone": "^3.5.0",
-    "mongodb": "^3.6.2",
-    "mysql": "^2.18.1",
+    "mini-css-extract-plugin": "^1.0.0",
     "nodemon": "^2.0.4",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-test-render": "^1.1.2",
     "react-test-renderer": "^16.13.1",
-    "reactstrap": "^8.6.0",
-    "styled-components": "^5.2.0"
+    "terser-webpack-plugin": "^4.2.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -58,6 +56,7 @@
     "babel-preset-airbnb": "^5.0.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "compression-webpack-plugin": "^6.0.3",
     "css-loader": "^4.3.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
