--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
     "express": "^4.17.1",
+    "glob": "^7.1.6",
     "jest": "^26.4.2",
     "material-ui-dropzone": "^3.5.0",
     "mini-css-extract-plugin": "^1.0.0",
@@ -69,10 +70,12 @@
     "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.5.0",
     "mark.js": "^8.11.1",
+    "purgecss-webpack-plugin": "^3.0.0",
     "react-addons-test-utils": "^15.6.2",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.44.2",
+    "webpack-bundle-analyzer": "^3.9.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   }
